[gd_scene load_steps=48 format=2]

[ext_resource path="res://assets/cog-solid.svg" type="Texture" id=1]
[ext_resource path="res://game/ground.png" type="Texture" id=2]
[ext_resource path="res://game/wind_button/frame2.png" type="Texture" id=3]
[ext_resource path="res://game/wind_button/frame4.png" type="Texture" id=4]
[ext_resource path="res://game/background/Wasser 1.2.png" type="Texture" id=5]
[ext_resource path="res://game/wind_button/frame6.png" type="Texture" id=6]
[ext_resource path="res://game/wind_button/frame7.png" type="Texture" id=7]
[ext_resource path="res://game/wind_button/frame1.png" type="Texture" id=8]
[ext_resource path="res://game/wind_button/frame5.png" type="Texture" id=9]
[ext_resource path="res://game/wind_button/frame3.png" type="Texture" id=10]
[ext_resource path="res://game/Camera.gd" type="Script" id=11]
[ext_resource path="res://game/Game.gd" type="Script" id=12]
[ext_resource path="res://game/bug/Bug.tscn" type="PackedScene" id=13]
[ext_resource path="res://game/cloud/Cloud.tscn" type="PackedScene" id=14]
[ext_resource path="res://ui/OverlayMenu.tscn" type="PackedScene" id=15]
[ext_resource path="res://assets/Roboto-Regular.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://game/sun/sun.png" type="Texture" id=17]
[ext_resource path="res://game/sun/Sun.gd" type="Script" id=18]
[ext_resource path="res://game/dandelion/flowers.png" type="Texture" id=19]
[ext_resource path="res://game/background/Wasser 1.3.png" type="Texture" id=20]
[ext_resource path="res://game/background/Wasser 1.1.png" type="Texture" id=21]
[ext_resource path="res://game/clock.png" type="Texture" id=22]
[ext_resource path="res://game/sound/DandelionSong_v1.wav" type="AudioStream" id=23]
[ext_resource path="res://game/background/Wasser 2.2.png" type="Texture" id=24]
[ext_resource path="res://game/background/Wasser 1.5.png" type="Texture" id=25]
[ext_resource path="res://game/background/Wasser 1.4.png" type="Texture" id=26]
[ext_resource path="res://game/background/Wasser 1.6.png" type="Texture" id=27]
[ext_resource path="res://game/background/Wasser 1.7.png" type="Texture" id=28]
[ext_resource path="res://game/background/Wasser 1.8.png" type="Texture" id=29]
[ext_resource path="res://game/background/Hintergrund neu.png" type="Texture" id=30]
[ext_resource path="res://game/background/Wasser 1.9.png" type="Texture" id=31]
[ext_resource path="res://game/background/Wasser 2.3.png" type="Texture" id=32]
[ext_resource path="res://game/background/Wasser 2.1.png" type="Texture" id=33]
[ext_resource path="res://game/background/UBoot.tscn" type="PackedScene" id=34]
[ext_resource path="res://game/tutorial/Tutorials.gd" type="Script" id=35]
[ext_resource path="res://game/stone_medium.png" type="Texture" id=36]
[ext_resource path="res://game/stone_large.png" type="Texture" id=37]
[ext_resource path="res://game/tutorial/Tutorials.tscn" type="PackedScene" id=38]

[sub_resource type="AnimatedTexture" id=1]
frames = 6
frame_0/texture = ExtResource( 9 )
frame_1/texture = ExtResource( 6 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 8 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 3 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 10 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 4 )
frame_5/delay_sec = 0.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 19 )
region = Rect2( 145, 75, 28, 28 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 16 )

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -539.001, 86.2602, 0, 0, 0, 0, -503.212, -61.1077, 0, 0, 0, 0, -465.317, -155.844, 0, 0, 0, 0, -414.791, -252.686, 0, 0, 0, 0, -363.212, -312.686, 0, 0, 0, 0, -303.213, -359.001, 0, 0, 0, 0, -228.476, -400.054, 0, 0, 0, 0, -149.529, -433.738, 0, 0, 0, 0, -92.6873, -446.369, 0, 0, 0, 0, -23.2138, -451.632, 0, 0, 0, 0, 77.8384, -450.58, 0, 0, 0, 0, 177.838, -436.896, 0, 0, 0, 0, 255.732, -404.264, 0, 0, 0, 0, 336.785, -349.528, 0, 0, 0, 0, 406.258, -288.475, 0, 0, 0, 0, 471.521, -222.16, 0, 0, 0, 0, 515.731, -133.739, 0, 0, 0, 0, 575.731, 82.0497 )
}

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 30 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 5 ), ExtResource( 20 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 31 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 24 ), ExtResource( 32 ), ExtResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 1, 1 )

[node name="Game" type="Node2D"]
script = ExtResource( 12 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="OverlayMenu" parent="UI" instance=ExtResource( 15 )]
margin_right = 159.0
margin_bottom = 122.0

[node name="MarginContainer" type="MarginContainer" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="TextureButton" parent="UI/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 30, 30 )
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindLeft" type="TextureButton" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_right = 32.0
margin_bottom = 64.0
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 4 )
texture_pressed = SubResource( 1 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindRight" type="TextureButton" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_right = 32.0
margin_bottom = 64.0
texture_normal = ExtResource( 4 )
texture_pressed = SubResource( 1 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -97.0
margin_bottom = 66.0
grow_horizontal = 0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PanelContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 162.0
margin_bottom = 133.0

[node name="HBoxCounter" type="HBoxContainer" parent="UI/PanelContainer/VBoxContainer"]
margin_right = 161.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="UI/PanelContainer/VBoxContainer/HBoxCounter"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = SubResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DandelionCounter" type="Label" parent="UI/PanelContainer/VBoxContainer/HBoxCounter"]
margin_left = 68.0
margin_top = 3.0
margin_right = 161.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxTimer" type="HBoxContainer" parent="UI/PanelContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 161.0
margin_bottom = 132.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="UI/PanelContainer/VBoxContainer/HBoxTimer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 22 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Label" parent="UI/PanelContainer/VBoxContainer/HBoxTimer"]
margin_left = 68.0
margin_top = 3.0
margin_right = 161.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0:31"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverPopup" type="PopupPanel" parent="UI"]
pause_mode = 2
margin_right = 8.0
margin_bottom = 8.0
popup_exclusive = true

[node name="MarginContainer" type="MarginContainer" parent="UI/GameOverPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 123.0
margin_bottom = 68.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverPopup/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 109.0
margin_bottom = 54.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="UI/GameOverPopup/MarginContainer/VBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/GameOverPopup/MarginContainer/VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Back" type="Button" parent="UI/GameOverPopup/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 12.0
margin_bottom = 20.0
text = "back"

[node name="Restart" type="Button" parent="UI/GameOverPopup/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 12.0
margin_bottom = 20.0
disabled = true
text = "restart"

[node name="Tutorials" parent="UI" instance=ExtResource( 38 )]
script = ExtResource( 35 )

[node name="Cloud" parent="." instance=ExtResource( 14 )]
pause_mode = 2
position = Vector2( 0, -350 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -101
follow_viewport_enable = true

[node name="Sun" type="Tween" parent="CanvasLayer"]
repeat = true
playback_speed = 0.25
playback/repeat = true
playback/speed = 0.25
script = ExtResource( 18 )

[node name="Path2D" type="Path2D" parent="CanvasLayer/Sun"]
curve = SubResource( 5 )

[node name="PathFollow2D" type="PathFollow2D" parent="CanvasLayer/Sun/Path2D"]
position = Vector2( -4.52025, -451.437 )
rotation = -1.12533
offset = 835.376
rotate = false

[node name="sun" type="Sprite" parent="CanvasLayer/Sun/Path2D/PathFollow2D"]
texture = ExtResource( 17 )

[node name="ground" type="Sprite" parent="."]
position = Vector2( 0.962036, 0 )
texture = ExtResource( 2 )
offset = Vector2( 0, 90 )
region_enabled = true
region_rect = Rect2( -2000, 0, 4000, 192 )

[node name="Bug" parent="." instance=ExtResource( 13 )]
position = Vector2( -282.099, -232.477 )
rotation = -6.68489

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -196 )
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 11 )

[node name="Tween" type="Tween" parent="Camera"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 1, 0 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0 )

[node name="background" type="AnimatedSprite" parent="ParallaxBackground/ParallaxLayer"]
frames = SubResource( 6 )
playing = true
offset = Vector2( 0, 4 )

[node name="WaterBottomLayer" type="AnimatedSprite" parent="ParallaxBackground/ParallaxLayer"]
frames = SubResource( 7 )
playing = true
offset = Vector2( 0, 4 )

[node name="WaterTopLayer" type="AnimatedSprite" parent="ParallaxBackground/ParallaxLayer"]
frames = SubResource( 8 )
frame = 1
playing = true
offset = Vector2( 0, 4 )

[node name="UBoot" parent="ParallaxBackground/ParallaxLayer" instance=ExtResource( 34 )]
frame = 0

[node name="SelectionHelper" type="Area2D" parent="."]
position = Vector2( -282.099, -232.477 )
rotation = -0.401704

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectionHelper"]
shape = SubResource( 9 )

[node name="TimelimitTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
autoplay = true

[node name="SoundEffectPlayer" type="AudioStreamPlayer" parent="."]

[node name="SmallMedium" type="Area2D" parent="."]
position = Vector2( 341.701, -26.7078 )

[node name="stone_medium" type="Sprite" parent="SmallMedium"]
texture = ExtResource( 36 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SmallMedium"]
polygon = PoolVector2Array( -8.94833, -8.61935, -22.2666, -3.62498, -29.8771, 18.2551, -29.8771, 27.7682, -17.9857, 43.2269, 15.31, 41.8, 27.677, 23.2495, 22.4448, 5.65027, 0.326904, -11.7111 )

[node name="SmallLarge" type="Area2D" parent="."]
position = Vector2( 260.923, -22.0587 )

[node name="stone_large" type="Sprite" parent="SmallLarge"]
texture = ExtResource( 37 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SmallLarge"]
polygon = PoolVector2Array( -15.1428, -12.8401, -22.2666, -3.62498, -32.7706, 18.3474, -31.9957, 35.7814, 12.9454, 44.8859, 37.9341, 42.9488, 31.5417, 15.0543, 24.9555, -5.86653, 17.207, -13.615, 0.354126, -19.2326 )
[connection signal="about_to_show" from="UI/OverlayMenu" to="." method="_on_OverlayMenu_about_to_show"]
[connection signal="popup_hide" from="UI/OverlayMenu" to="." method="_on_OverlayMenu_popup_hide"]
[connection signal="pressed" from="UI/MarginContainer/Menu" to="." method="_popup_overlay_menu"]
[connection signal="button_down" from="UI/WindLeft" to="." method="_on_WindLeft_button_down"]
[connection signal="button_up" from="UI/WindLeft" to="." method="_on_Wind_button_up"]
[connection signal="pressed" from="UI/WindLeft" to="." method="_on_WindLeft_pressed"]
[connection signal="button_down" from="UI/WindRight" to="." method="_on_WindRight_button_down"]
[connection signal="button_up" from="UI/WindRight" to="." method="_on_Wind_button_up"]
[connection signal="pressed" from="UI/WindRight" to="." method="_on_WindRight_pressed"]
[connection signal="pressed" from="UI/GameOverPopup/MarginContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="UI/GameOverPopup/MarginContainer/VBoxContainer/HBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="timeout" from="TimelimitTimer" to="." method="_on_TimelimitTimer_timeout"]
